[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "github-unitls"
version = "0.1.0"
description = "Reusable storage and GitHub sync helper with a terminal CLI"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools]
py-modules = ["cli"]

[project.scripts]
gu = "cli:main"
